framec/tests/snapshots/cpp_snapshots__lifecycle.snap
---
source: framec/tests/cpp_snapshots.rs
expression: "compile_fixture(\"08_lifecycle\", \"cpp\")"
---
#include <string>
#include <unordered_map>
#include <vector>
#include <any>
#include <memory>
#include <functional>
#include <stdexcept>
#include <cstdlib>
#include <cstdio>

class LifecycleFrameEvent {
public:
    std::string _message;
    std::vector<std::any> _parameters;

    LifecycleFrameEvent(const std::string& message, std::vector<std::any> params = {})
        : _message(message), _parameters(std::move(params)) {}
};

class LifecycleFrameContext {
public:
    LifecycleFrameEvent _event;
    std::any _return;
    std::unordered_map<std::string, std::any> _data;
    bool _transitioned = false;

    LifecycleFrameContext(LifecycleFrameEvent event, std::any default_return = {})
        : _event(std::move(event)), _return(std::move(default_return)) {}
};

class LifecycleCompartment {
public:
    std::string state;
    std::vector<std::any> state_args;
    std::unordered_map<std::string, std::any> state_vars;
    std::vector<std::any> enter_args;
    std::vector<std::any> exit_args;
    std::unique_ptr<LifecycleFrameEvent> forward_event;
    std::shared_ptr<LifecycleCompartment> parent_compartment;

    explicit LifecycleCompartment(const std::string& state) : state(state) {}
};

class Lifecycle {
private:
    std::vector<std::shared_ptr<LifecycleCompartment>> _state_stack;
    std::shared_ptr<LifecycleCompartment> __compartment;
    std::shared_ptr<LifecycleCompartment> __next_compartment;
    std::vector<LifecycleFrameContext> _context_stack;

    std::shared_ptr<LifecycleCompartment> __prepareEnter(const std::string& leaf, std::vector<std::any> state_args, std::vector<std::any> enter_args) {
        std::shared_ptr<LifecycleCompartment> comp = nullptr;
        auto chain_table = hsm_chain();
        for (const auto& name : chain_table[leaf]) {
            auto new_comp = std::make_shared<LifecycleCompartment>(name);
            new_comp->state_args = state_args;
            new_comp->enter_args = enter_args;
            new_comp->parent_compartment = comp;
            comp = new_comp;
        }
        return comp;

    }

    void __prepareExit(std::vector<std::any> exit_args) {
        std::shared_ptr<LifecycleCompartment> comp = __compartment;
        while (comp) {
            comp->exit_args = exit_args;
            comp = comp->parent_compartment;
        }

    }

    void __kernel(LifecycleFrameEvent& __e) {
        // Route event to current state.
        __router(__e);
        // Drain any transitions queued by the handler.
        while (__next_compartment) {
            auto next_compartment = std::move(__next_compartment);
            // Exit the current (leaf) state.
            LifecycleFrameEvent __exit_event("<$", __compartment->exit_args);
            __router(__exit_event);
            // Switch to the new compartment.
            __compartment = std::move(next_compartment);
            // Three-branch forward-event handling.
            if (!__compartment->forward_event) {
                // No forwarded event — synthesize a fresh $>.
                LifecycleFrameEvent __enter_event("$>", __compartment->enter_args);
                __router(__enter_event);
            } else if (__compartment->forward_event->_message == "$>") {
                // Forwarded event IS $> — dispatch directly so the
                // destination's $> handler receives the caller's payload.
                auto forward_event = std::move(__compartment->forward_event);
                __router(*forward_event);
            } else {
                // Forwarded event is not $> — initialize the destination
                // with a fresh $>, then dispatch the forward.
                auto forward_event = std::move(__compartment->forward_event);
                LifecycleFrameEvent __enter_event("$>", __compartment->enter_args);
                __router(__enter_event);
                __router(*forward_event);
            }
            for (auto& ctx : _context_stack) {
                ctx._transitioned = true;
            }
        }

    }

    void __router(LifecycleFrameEvent& __e) {
        if (__compartment->state == "Idle") {
            _state_Idle(__e, __compartment);
        } else if (__compartment->state == "Running") {
            _state_Running(__e, __compartment);
        }

    }

    void __transition(std::shared_ptr<LifecycleCompartment> next) {
        __next_compartment = next;

    }

    void _state_Idle(LifecycleFrameEvent& __e, std::shared_ptr<LifecycleCompartment> compartment) {
        if (__e._message == "start") {
            this->_s_Idle_hdl_user_start(__e, compartment);
            return;
        }

    }

    void _state_Running(LifecycleFrameEvent& __e, std::shared_ptr<LifecycleCompartment> compartment) {
        if (__e._message == "<$") {
            this->_s_Running_hdl_frame_exit(__e, compartment);
            return;
        }
        if (__e._message == "$>") {
            this->_s_Running_hdl_frame_enter(__e, compartment);
            return;
        }
        if (__e._message == "stop") {
            this->_s_Running_hdl_user_stop(__e, compartment);
            return;
        }

    }

    void _s_Idle_hdl_user_start(LifecycleFrameEvent& __e, std::shared_ptr<LifecycleCompartment> compartment) {
        auto label = std::any_cast<std::string>(__e._parameters[0]);
        auto __next = __prepareEnter("Running", std::vector<std::any>{}, std::vector<std::any>{std::any(label)});
        __transition(std::move(__next));
        return;

    }

    void _s_Running_hdl_frame_exit(LifecycleFrameEvent& __e, std::shared_ptr<LifecycleCompartment> compartment) {
        this->exited = this->exited + 1;

    }

    void _s_Running_hdl_frame_enter(LifecycleFrameEvent& __e, std::shared_ptr<LifecycleCompartment> compartment) {
        auto label = std::any_cast<std::string>(compartment->enter_args[0]);
        this->entered = this->entered + 1;
        this->tag = label;

    }

    void _s_Running_hdl_user_stop(LifecycleFrameEvent& __e, std::shared_ptr<LifecycleCompartment> compartment) {
        auto __next = __prepareEnter("Idle", std::vector<std::any>{}, std::vector<std::any>{});
        __transition(std::move(__next));
        return;

    }

public:
    int entered = 0;
    int exited = 0;
    std::string tag = "";

    Lifecycle() {
        __compartment = __prepareEnter("Idle", std::vector<std::any>{}, std::vector<std::any>{});
    }

    static Lifecycle __create() {
        Lifecycle c;
        LifecycleFrameEvent __e("$>", c.__compartment->enter_args);
        LifecycleFrameContext __ctx(std::move(__e));
        c._context_stack.push_back(std::move(__ctx));
        c.__kernel(c._context_stack.back()._event);
        c._context_stack.pop_back();
        return c;
    }

    std::unordered_map<std::string, std::vector<std::string>> hsm_chain() {
        return {
            {"Idle", {"Idle"} },
            {"Running", {"Running"} },
        };
    }

    void start(std::string label) {
        LifecycleFrameEvent __e("start", std::vector<std::any>{label});
        LifecycleFrameContext __ctx(std::move(__e));
        _context_stack.push_back(std::move(__ctx));
        struct __CtxGuard { decltype(_context_stack)& s; ~__CtxGuard() { s.pop_back(); } } __ctx_guard{_context_stack};
        __kernel(_context_stack.back()._event);

    }

    void stop() {
        LifecycleFrameEvent __e("stop");
        LifecycleFrameContext __ctx(std::move(__e));
        _context_stack.push_back(std::move(__ctx));
        struct __CtxGuard { decltype(_context_stack)& s; ~__CtxGuard() { s.pop_back(); } } __ctx_guard{_context_stack};
        __kernel(_context_stack.back()._event);

    }
};
