framec/tests/snapshots/cpp_snapshots__lifecycle_args.snap
---
source: framec/tests/cpp_snapshots.rs
expression: "compile_fixture(\"13_lifecycle_args\", \"cpp\")"
---
#include <string>
#include <unordered_map>
#include <vector>
#include <any>
#include <memory>
#include <functional>
#include <stdexcept>

class LifecycleArgsFrameEvent {
public:
    std::string _message;
    std::vector<std::any> _parameters;

    LifecycleArgsFrameEvent(const std::string& message, std::vector<std::any> params = {})
        : _message(message), _parameters(std::move(params)) {}
};

class LifecycleArgsFrameContext {
public:
    LifecycleArgsFrameEvent _event;
    std::any _return;
    std::unordered_map<std::string, std::any> _data;
    bool _transitioned = false;

    LifecycleArgsFrameContext(LifecycleArgsFrameEvent event, std::any default_return = {})
        : _event(std::move(event)), _return(std::move(default_return)) {}
};

class LifecycleArgsCompartment {
public:
    std::string state;
    std::vector<std::any> state_args;
    std::unordered_map<std::string, std::any> state_vars;
    std::vector<std::any> enter_args;
    std::vector<std::any> exit_args;
    std::unique_ptr<LifecycleArgsFrameEvent> forward_event;
    std::shared_ptr<LifecycleArgsCompartment> parent_compartment;

    explicit LifecycleArgsCompartment(const std::string& state) : state(state) {}
};

class LifecycleArgs {
private:
    std::vector<std::shared_ptr<LifecycleArgsCompartment>> _state_stack;
    std::shared_ptr<LifecycleArgsCompartment> __compartment;
    std::shared_ptr<LifecycleArgsCompartment> __next_compartment;
    std::vector<LifecycleArgsFrameContext> _context_stack;

    std::shared_ptr<LifecycleArgsCompartment> __prepareEnter(const std::string& leaf, std::vector<std::any> state_args, std::vector<std::any> enter_args) {
        std::shared_ptr<LifecycleArgsCompartment> comp = nullptr;
        auto chain_table = hsm_chain();
        for (const auto& name : chain_table[leaf]) {
            auto new_comp = std::make_shared<LifecycleArgsCompartment>(name);
            new_comp->state_args = state_args;
            new_comp->enter_args = enter_args;
            new_comp->parent_compartment = comp;
            comp = new_comp;
        }
        return comp;

    }

    void __prepareExit(std::vector<std::any> exit_args) {
        std::shared_ptr<LifecycleArgsCompartment> comp = __compartment;
        while (comp) {
            comp->exit_args = exit_args;
            comp = comp->parent_compartment;
        }

    }

    void __kernel(LifecycleArgsFrameEvent& __e) {
        // Route event to current state.
        __router(__e);
        // Drain any transitions queued by the handler.
        while (__next_compartment) {
            auto next_compartment = std::move(__next_compartment);
            // Exit the current (leaf) state.
            LifecycleArgsFrameEvent __exit_event("<$", __compartment->exit_args);
            __router(__exit_event);
            // Switch to the new compartment.
            __compartment = std::move(next_compartment);
            // Three-branch forward-event handling.
            if (!__compartment->forward_event) {
                // No forwarded event — synthesize a fresh $>.
                LifecycleArgsFrameEvent __enter_event("$>", __compartment->enter_args);
                __router(__enter_event);
            } else if (__compartment->forward_event->_message == "$>") {
                // Forwarded event IS $> — dispatch directly so the
                // destination's $> handler receives the caller's payload.
                auto forward_event = std::move(__compartment->forward_event);
                __router(*forward_event);
            } else {
                // Forwarded event is not $> — initialize the destination
                // with a fresh $>, then dispatch the forward.
                auto forward_event = std::move(__compartment->forward_event);
                LifecycleArgsFrameEvent __enter_event("$>", __compartment->enter_args);
                __router(__enter_event);
                __router(*forward_event);
            }
            for (auto& ctx : _context_stack) {
                ctx._transitioned = true;
            }
        }

    }

    void __router(LifecycleArgsFrameEvent& __e) {
        if (__compartment->state == "Idle") {
            _state_Idle(__e, __compartment);
        } else if (__compartment->state == "Active") {
            _state_Active(__e, __compartment);
        }

    }

    void __transition(std::shared_ptr<LifecycleArgsCompartment> next) {
        __next_compartment = next;

    }

    void _state_Idle(LifecycleArgsFrameEvent& __e, std::shared_ptr<LifecycleArgsCompartment> compartment) {
        if (__e._message == "load") {
            this->_s_Idle_hdl_user_load(__e, compartment);
            return;
        }

    }

    void _state_Active(LifecycleArgsFrameEvent& __e, std::shared_ptr<LifecycleArgsCompartment> compartment) {
        if (__e._message == "$>") {
            this->_s_Active_hdl_frame_enter(__e, compartment);
            return;
        }
        if (__e._message == "tag") {
            this->_s_Active_hdl_user_tag(__e, compartment);
            return;
        }
        if (__e._message == "total") {
            this->_s_Active_hdl_user_total(__e, compartment);
            return;
        }

    }

    void _s_Idle_hdl_user_load(LifecycleArgsFrameEvent& __e, std::shared_ptr<LifecycleArgsCompartment> compartment) {
        auto n = std::any_cast<int>(__e._parameters[0]);
        auto label = std::any_cast<std::string>(__e._parameters[1]);
        auto __next = __prepareEnter("Active", std::vector<std::any>{}, std::vector<std::any>{std::any(n), std::any(label)});
        __transition(std::move(__next));
        return;

    }

    void _s_Active_hdl_frame_enter(LifecycleArgsFrameEvent& __e, std::shared_ptr<LifecycleArgsCompartment> compartment) {
        auto count = std::any_cast<int>(compartment->enter_args[0]);
        auto name = std::any_cast<std::string>(compartment->enter_args[1]);
        this->sum = count + 1;
        this->label = name;

    }

    void _s_Active_hdl_user_tag(LifecycleArgsFrameEvent& __e, std::shared_ptr<LifecycleArgsCompartment> compartment) {
        _context_stack.back()._return = std::any(this->label);
                        return

    }

    void _s_Active_hdl_user_total(LifecycleArgsFrameEvent& __e, std::shared_ptr<LifecycleArgsCompartment> compartment) {
        _context_stack.back()._return = std::any(this->sum);
                        return

    }

public:
    int sum = 0;
    std::string label = "";

    LifecycleArgs() {
        __compartment = __prepareEnter("Idle", std::vector<std::any>{}, std::vector<std::any>{});
    }

    static LifecycleArgs __create() {
        LifecycleArgs c;
        LifecycleArgsFrameEvent __e("$>", c.__compartment->enter_args);
        LifecycleArgsFrameContext __ctx(std::move(__e));
        c._context_stack.push_back(std::move(__ctx));
        c.__kernel(c._context_stack.back()._event);
        c._context_stack.pop_back();
        return c;
    }

    std::unordered_map<std::string, std::vector<std::string>> hsm_chain() {
        return {
            {"Idle", {"Idle"} },
            {"Active", {"Active"} },
        };
    }

    void load(int n, std::string label) {
        LifecycleArgsFrameEvent __e("load", std::vector<std::any>{n, label});
        LifecycleArgsFrameContext __ctx(std::move(__e));
        _context_stack.push_back(std::move(__ctx));
        struct __CtxGuard { decltype(_context_stack)& s; ~__CtxGuard() { s.pop_back(); } } __ctx_guard{_context_stack};
        __kernel(_context_stack.back()._event);

    }

    int total() {
        LifecycleArgsFrameEvent __e("total");
        LifecycleArgsFrameContext __ctx(std::move(__e), std::any(int()));
        _context_stack.push_back(std::move(__ctx));
        struct __CtxGuard { decltype(_context_stack)& s; ~__CtxGuard() { s.pop_back(); } } __ctx_guard{_context_stack};
        __kernel(_context_stack.back()._event);
        auto __result = std::any_cast<int>(std::move(_context_stack.back()._return));
        return __result;

    }

    std::string tag() {
        LifecycleArgsFrameEvent __e("tag");
        LifecycleArgsFrameContext __ctx(std::move(__e), std::any(std::string()));
        _context_stack.push_back(std::move(__ctx));
        struct __CtxGuard { decltype(_context_stack)& s; ~__CtxGuard() { s.pop_back(); } } __ctx_guard{_context_stack};
        __kernel(_context_stack.back()._event);
        auto __result = std::any_cast<std::string>(std::move(_context_stack.back()._return));
        return __result;

    }
};
