framec/tests/snapshots/cpp_snapshots__linear_fsm.snap
---
source: framec/tests/cpp_snapshots.rs
expression: "compile_fixture(\"01_linear_fsm\", \"cpp\")"
---
#include <string>
#include <unordered_map>
#include <vector>
#include <any>
#include <memory>
#include <functional>

class LinearFsmFrameEvent {
public:
    std::string _message;
    std::vector<std::any> _parameters;

    LinearFsmFrameEvent(const std::string& message, std::vector<std::any> params = {})
        : _message(message), _parameters(std::move(params)) {}
};

class LinearFsmFrameContext {
public:
    LinearFsmFrameEvent _event;
    std::any _return;
    std::unordered_map<std::string, std::any> _data;
    bool _transitioned = false;

    LinearFsmFrameContext(LinearFsmFrameEvent event, std::any default_return = {})
        : _event(std::move(event)), _return(std::move(default_return)) {}
};

class LinearFsmCompartment {
public:
    std::string state;
    std::vector<std::any> state_args;
    std::unordered_map<std::string, std::any> state_vars;
    std::vector<std::any> enter_args;
    std::vector<std::any> exit_args;
    std::unique_ptr<LinearFsmFrameEvent> forward_event;
    std::shared_ptr<LinearFsmCompartment> parent_compartment;

    explicit LinearFsmCompartment(const std::string& state) : state(state) {}
};

class LinearFsm {
private:
    std::vector<std::shared_ptr<LinearFsmCompartment>> _state_stack;
    std::shared_ptr<LinearFsmCompartment> __compartment;
    std::shared_ptr<LinearFsmCompartment> __next_compartment;
    std::vector<LinearFsmFrameContext> _context_stack;

    std::shared_ptr<LinearFsmCompartment> __prepareEnter(const std::string& leaf, std::vector<std::any> state_args, std::vector<std::any> enter_args) {
        std::shared_ptr<LinearFsmCompartment> comp = nullptr;
        auto chain_table = hsm_chain();
        for (const auto& name : chain_table[leaf]) {
            auto new_comp = std::make_shared<LinearFsmCompartment>(name);
            new_comp->state_args = state_args;
            new_comp->enter_args = enter_args;
            new_comp->parent_compartment = comp;
            comp = new_comp;
        }
        return comp;

    }

    void __prepareExit(std::vector<std::any> exit_args) {
        std::shared_ptr<LinearFsmCompartment> comp = __compartment;
        while (comp) {
            comp->exit_args = exit_args;
            comp = comp->parent_compartment;
        }

    }

    void __kernel(LinearFsmFrameEvent& __e) {
        // Route event to current state.
        __router(__e);
        // Drain any transitions queued by the handler.
        while (__next_compartment) {
            auto next_compartment = std::move(__next_compartment);
            // Exit the current (leaf) state.
            LinearFsmFrameEvent __exit_event("<$", __compartment->exit_args);
            __router(__exit_event);
            // Switch to the new compartment.
            __compartment = std::move(next_compartment);
            // Three-branch forward-event handling.
            if (!__compartment->forward_event) {
                // No forwarded event — synthesize a fresh $>.
                LinearFsmFrameEvent __enter_event("$>", __compartment->enter_args);
                __router(__enter_event);
            } else if (__compartment->forward_event->_message == "$>") {
                // Forwarded event IS $> — dispatch directly so the
                // destination's $> handler receives the caller's payload.
                auto forward_event = std::move(__compartment->forward_event);
                __router(*forward_event);
            } else {
                // Forwarded event is not $> — initialize the destination
                // with a fresh $>, then dispatch the forward.
                auto forward_event = std::move(__compartment->forward_event);
                LinearFsmFrameEvent __enter_event("$>", __compartment->enter_args);
                __router(__enter_event);
                __router(*forward_event);
            }
            for (auto& ctx : _context_stack) {
                ctx._transitioned = true;
            }
        }

    }

    void __router(LinearFsmFrameEvent& __e) {
        if (__compartment->state == "Idle") {
            _state_Idle(__e, __compartment);
        } else if (__compartment->state == "Active") {
            _state_Active(__e, __compartment);
        } else if (__compartment->state == "Done") {
            _state_Done(__e, __compartment);
        }

    }

    void __transition(std::shared_ptr<LinearFsmCompartment> next) {
        __next_compartment = next;

    }

    void _state_Idle(LinearFsmFrameEvent& __e, std::shared_ptr<LinearFsmCompartment> compartment) {
        if (__e._message == "start") {
            this->_s_Idle_hdl_user_start(__e, compartment);
            return;
        }

    }

    void _state_Active(LinearFsmFrameEvent& __e, std::shared_ptr<LinearFsmCompartment> compartment) {
        if (__e._message == "finish") {
            this->_s_Active_hdl_user_finish(__e, compartment);
            return;
        }
        if (__e._message == "progress") {
            this->_s_Active_hdl_user_progress(__e, compartment);
            return;
        }

    }

    void _state_Done(LinearFsmFrameEvent& __e, std::shared_ptr<LinearFsmCompartment> compartment) {


    }

    void _s_Idle_hdl_user_start(LinearFsmFrameEvent& __e, std::shared_ptr<LinearFsmCompartment> compartment) {
        auto __next = __prepareEnter("Active", std::vector<std::any>{}, std::vector<std::any>{});
        __transition(std::move(__next));
        return;

    }

    void _s_Active_hdl_user_finish(LinearFsmFrameEvent& __e, std::shared_ptr<LinearFsmCompartment> compartment) {
        auto __next = __prepareEnter("Done", std::vector<std::any>{}, std::vector<std::any>{});
        __transition(std::move(__next));
        return;

    }

    void _s_Active_hdl_user_progress(LinearFsmFrameEvent& __e, std::shared_ptr<LinearFsmCompartment> compartment) {
        auto amount = std::any_cast<int>(__e._parameters[0]);
        self.total = self.total + amount

    }

public:
    int total = 0;

    LinearFsm() {
        __compartment = __prepareEnter("Idle", std::vector<std::any>{}, std::vector<std::any>{});
    }

    static LinearFsm __create() {
        LinearFsm c;
        LinearFsmFrameEvent __e("$>", c.__compartment->enter_args);
        LinearFsmFrameContext __ctx(std::move(__e));
        c._context_stack.push_back(std::move(__ctx));
        c.__kernel(c._context_stack.back()._event);
        c._context_stack.pop_back();
        return c;
    }

    std::unordered_map<std::string, std::vector<std::string>> hsm_chain() {
        return {
            {"Idle", {"Idle"} },
            {"Active", {"Active"} },
            {"Done", {"Done"} },
        };
    }

    void start() {
        LinearFsmFrameEvent __e("start");
        LinearFsmFrameContext __ctx(std::move(__e));
        _context_stack.push_back(std::move(__ctx));
        __kernel(_context_stack.back()._event);
        _context_stack.pop_back();

    }

    void progress(int amount) {
        LinearFsmFrameEvent __e("progress", std::vector<std::any>{amount});
        LinearFsmFrameContext __ctx(std::move(__e));
        _context_stack.push_back(std::move(__ctx));
        __kernel(_context_stack.back()._event);
        _context_stack.pop_back();

    }

    void finish() {
        LinearFsmFrameEvent __e("finish");
        LinearFsmFrameContext __ctx(std::move(__e));
        _context_stack.push_back(std::move(__ctx));
        __kernel(_context_stack.back()._event);
        _context_stack.pop_back();

    }
};
